# laterite-duckdb

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  description.yml  extension_config.cmake  functions.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: cache.rs  cert.rs  certify.rs  dict_fns.rs  ffi_table.rs  lib.rs  load.rs  meta.rs  read_ags.rs  rows.rs  source.rs  typing.rs  validate.rs  wasm_lib.rs
test/sql/: fyi_tran.ags  laterite_ags4.test  tiers.ags
tests/: e2e.rs  functions_manifest.rs
tests/fixtures/: clean.ags  mini.ags
