# laterite_ags4 — DuckDB community extension (dedicated repo: niko86/laterite-duckdb).
#
# This crate IS the extension (extension-ci-tools requires the Cargo.toml at the
# repo root). Its library dependencies are NOT vendored or pulled from crates.io
# — they come from the `laterite` public mirror checked out as a git submodule at
# `laterite/`, path-dep'd below. community-extensions clones this repo with
# `submodules: recursive`, so the submodule (and its crates) are present at build.
#
# Build proven locally with these path-deps pointed at the live monorepo (a
# standalone crate outside the workspace built a 5.9 MB loadable cdylib); the real
# repo points them at the mirror submodule, as below.
[package]
name = "laterite-duckdb"
version = "0.7.0"
edition = "2024"
rust-version = "1.87"      # quack-rs MSRV
description = "Read AGS4 geotechnical files as typed, UUID-keyed tables, from SQL"
license = "MIT"
publish = false

[lib]
# Name the cdylib after the extension, not the package, so the build emits
# `liblaterite_ags4.dylib` — the filename extension-ci-tools expects
# (lib<EXTENSION_NAME>.dylib). Package stays `laterite-duckdb` (the repo name).
name = "laterite_ags4"
# `rlib` alongside `cdylib` so the wasm staticlib example (below) can link the
# library's `register` as a normal Rust dependency; the native extension is
# still the `cdylib`. A cdylib-only crate has no rlib for examples/tests to link.
crate-type = ["cdylib", "rlib"]

# WASM build path. extension-ci-tools' rust.Makefile builds the wasm artifact as
# `cargo build --target wasm32-unknown-emscripten --example laterite_ags4`, then
# emcc-links the resulting `liblaterite_ags4.a` exporting `_laterite_ags4_init_c_api`.
# This staticlib example is that build unit; see src/wasm_lib.rs for how it emits
# the C entry point without colliding with the cdylib's copy.
[[example]]
name = "laterite_ags4"
crate-type = ["staticlib"]
path = "src/wasm_lib.rs"

[dependencies]
# The four library crates, from the mirror submodule (laterite/ → niko86/laterite
# pinned to a release tag). laterite-ags4-emit comes transitively via laterite-ags4-core.
# default-features = false drops core's default `transport` feature: this is a
# READ-ONLY reader, so it needs none of laterite-transport's zstd + age crypto.
# Carrying it bloated the binary and broke the community-extensions mingw build
# (zstd-sys C symbols failed to link) and the wasm build (age→getrandom).
laterite-ags4-core = { path = "laterite/rust-packages/laterite-ags4-core", default-features = false }
laterite-types = { path = "laterite/rust-packages/laterite-types" }
laterite-ags4-validator = { path = "laterite/rust-packages/laterite-ags4-validator" }
serde_json = "1"
# WHATWG-label byte→text decoding for the `encoding` named param on read_ags /
# validate_ags (#294 #12). Already transitive via laterite-ags4-parse; direct so
# `read_ags` can decode non-UTF-8 bytes before the UTF-8-only core codec, and to
# resolve a label to the `&'static Encoding` `CheckOptions.encoding` takes.
encoding_rs = "0.8"
# quack-rs's `duckdb-1-5` feature exposes file_system/client_context = DuckDB's
# VFS, which the path/remote readers (read_ags, ags_groups, validate_ags, …) need.
# It's the version-exact C API line (pinned via libduckdb-sys below), so this is a
# native extension — community-extensions rebuilds it against each DuckDB release.
quack-rs = { version = "0.14", features = ["duckdb-1-5"] }
# Pinned to the DuckDB 1.5.3 ABI line. The VFS readers use the version-exact C API,
# so the extension is rebuilt per DuckDB release (community-extensions' build matrix
# does this). DuckDB-WASM is excluded — it lags this ABI; browser SQL-over-AGS is
# served by the dedicated `laterite-ags4-wasm` package instead.
libduckdb-sys = { version = "~1.10503", features = ["loadable-extension"] }

[dev-dependencies]
# In-process E2E (LOAD the built .duckdb_extension into a bundled DuckDB). Dev-only.
quack-rs = { version = "0.14", features = ["bundled-test", "duckdb-1-5"] }

# Release profile mirrors the community-extension build (small, fast cdylib).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
