# laterite_ags4 — DuckDB community extension (dedicated repo: niko86/laterite-duckdb).
#
# This crate IS the extension (extension-ci-tools requires the Cargo.toml at the
# repo root). Its library dependencies are NOT vendored or pulled from crates.io
# — they come from the `laterite` public mirror checked out as a git submodule at
# `laterite/`, path-dep'd below. community-extensions clones this repo with
# `submodules: recursive`, so the submodule (and its crates) are present at build.
#
# Build proven locally with these path-deps pointed at the live monorepo (a
# standalone crate outside the workspace built a 5.9 MB loadable cdylib); the real
# repo points them at the mirror submodule, as below.
[package]
name = "laterite-duckdb"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"      # duckdb-rs (1.10503.1) MSRV = 1.85.1; the community
                           # wasm image ships rustc 1.86, so no 1.87 pin.
description = "Read AGS4 geotechnical files as typed, UUID-keyed tables, from SQL"
license = "MIT"
publish = false

[lib]
# Name the cdylib after the extension, not the package, so the build emits
# `liblaterite_ags4.dylib` — the filename extension-ci-tools expects
# (lib<EXTENSION_NAME>.dylib). Package stays `laterite-duckdb` (the repo name).
name = "laterite_ags4"
# cdylib ONLY (matches the reference duckdb-rs extensions). The wasm staticlib
# example (below) compiles `src/lib.rs` in via `mod lib`, so it needs no rlib to
# link against — and crucially, WITH an `rlib` present `cargo build --example`
# also builds the lib's `cdylib` for wasm, whose emcc link fails ("undefined
# symbol: main") because SIDE_MODULE is only applied to the staticlib archive.
# cdylib-only keeps the wasm example self-contained and the entry symbol unique.
crate-type = ["cdylib"]

# WASM build path. extension-ci-tools' rust.Makefile builds the wasm artifact as
# `cargo build --target wasm32-unknown-emscripten --example laterite_ags4`, then
# emcc-links the resulting `liblaterite_ags4.a` exporting `_laterite_ags4_init_c_api`.
# This staticlib example is that build unit; see src/wasm_lib.rs for how it emits
# the C entry point without colliding with the cdylib's copy.
[[example]]
name = "laterite_ags4"
crate-type = ["staticlib"]
path = "src/wasm_lib.rs"

[dependencies]
# The library crates, from the mirror submodule (laterite/ → niko86/laterite
# pinned to a release tag). laterite-ags4-emit comes transitively via laterite-ags4-core.
# default-features = false drops core's default `transport` feature: this is a
# READ-ONLY reader, so it needs none of laterite-transport's zstd + age crypto.
# Carrying it bloated the binary and broke the community-extensions mingw build
# (zstd-sys C symbols failed to link) and the wasm build (age→getrandom).
laterite-ags4-core = { path = "laterite/rust-packages/laterite-ags4-core", default-features = false }
laterite-types = { path = "laterite/rust-packages/laterite-types" }
# The reference-data leaf (dictionary registry + rules-catalogue metadata),
# not the full validator: this reader only needs Dictionary / DictVersion /
# rule_metadata_json — all reference data, zero rule-engine — so depending on
# the leaf drops the validator's ~8.8k-line numbered-rules engine from the build.
laterite-ags4-reference = { path = "laterite/rust-packages/laterite-ags4-reference" }
serde_json = "1"
# WHATWG-label byte→text decoding for the `encoding` named param on read_ags /
# validate_ags (#294 #12). Already transitive via laterite-ags4-parse; direct so
# `read_ags` can decode non-UTF-8 bytes before the UTF-8-only core codec, and to
# resolve a label to the `&'static Encoding` `CheckOptions.encoding` takes.
encoding_rs = "0.8"
# The official DuckDB Rust binding (duckdb-rs), pinned to the DuckDB 1.5.3 C-API
# line (crate version 1.10503.1). `loadable-extension` builds the extension against
# the C Extension API (the API struct is resolved at load, so the binary is
# rebuilt per DuckDB release — community-extensions' build matrix does this).
# `vtab` exposes the table-function machinery. Unlike quack-rs (MSRV 1.87), this
# builds on rustc 1.86 = the community wasm image's toolchain, which unblocks wasm.
duckdb = { version = "1.10503.1", features = ["loadable-extension", "vtab"] }
# The raw DuckDB C API (the same version line duckdb-rs bundles). Needed directly
# for the VFS calls duckdb-rs's safe surface doesn't expose:
# duckdb_table_function_get_client_context → duckdb_client_context_get_file_system
# → duckdb_file_system_open / duckdb_file_handle_{size,seek,read,close}. All raw
# FFI is concentrated in src/ffi_table.rs + src/source.rs.
libduckdb-sys = { version = "1.10503.1", features = ["loadable-extension"] }

[dev-dependencies]
# In-process E2E host: LOAD the built .duckdb_extension into a bundled DuckDB.
# `bundled` compiles DuckDB from source and statically links it — dev/test only,
# NEVER on the shipped extension (that stays loadable, resolving the host's C API).
# libduckdb-sys' loadable vs bundled builds can't share target/, so CI builds the
# loadable artifact + freezes it, THEN runs the bundled-host e2e (one rebuild).
duckdb = { version = "1.10503.1", features = ["bundled"] }

# Release profile mirrors the community-extension build (small, fast cdylib).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
